--- a/index.html
+++ b/index.html
@@ -209,6 +209,18 @@
             </div>
         </div>
     </section>
+
+
+    <section class="participar">
+        <section class="participar-container">
+            <p class="section-title">FECHAS IMPORTANTES</p>
+            <h1 class="desk-title">¿Qué obtienen las StartUps?</h1>
+            <h1 class="mob-title">Fechas límite para participar</h1>
+            <p>La convocatoria estará abierta durante un periodo de 8 días. Agrega a tu calendario el recordatorio para participar en
+            la convocatoria.</p>
+            <img src="assets/img/calendar.PNG" alt="">
+        </section>
+    </section>
     
 
     <h1>Landing Page</h1>
