--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
     </section>
 
-    <section class="benefits">
+    <!-- <section class="benefits">
         <div class="benefits-container">
             <p class="section-title">BENEFICIOS</p>
             <h1>¿Qué obtienen las StartUps?</h1>
@@ -208,7 +208,7 @@
                 
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <section class="participar">
@@ -218,12 +218,16 @@
             <h1 class="mob-title">Fechas límite para participar</h1>
             <p>La convocatoria estará abierta durante un periodo de 8 días. Agrega a tu calendario el recordatorio para participar en
             la convocatoria.</p>
-            <img src="assets/img/calendar.PNG" alt="">
+            <img src="assets/img/calendar.PNG" alt="calendar">
+
+            <div class="add-calendar">
+                <h1>Participa y haz parte del Campus Lab M7</h1>
+                <h2 class="add-subtitle">10:00 AM May 2021</h2>
+            </div>
         </section>
     </section>
     
 
-    <h1>Landing Page</h1>
 
     <!-- Jquery Main -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
